--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-    <div class="wrapper">
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Other Website</title>
+</head>
+<body> 
+   <div class="wrapper">
       <div class="sidebar">
         <div>
           <form class="search" id="search">
@@ -95,6 +105,9 @@
             </div>
           </div>
         </div>
-        <p class="credits">Crafted with ❤️ by <a href="https://youtu.be/A2ianP1cG98">Open Source Coding</a></p>
+        <p class="credits">Lol.</a></p>
       </div>
     </div>
+    <script src="script.js"></script>
+</body>
+</html>
