--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button><i class="fas fa-search"></i></button>
           </form>
           <div class="weather-icon">
-            <img id="icon" src="icons/sun/4.png" alt="" />
+            <img id="icon" src="https://assets.msn.com/weathermapdata/1/static/weather/Icons/taskbar_v10/Condition_Card/SunnyDayV3.svg" alt="" />
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
