--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Other Website</title>
-</head>
-<body> 
-   <div class="wrapper">
+        <div class="wrapper">
       <div class="sidebar">
         <div>
           <form class="search" id="search">
@@ -16,7 +13,7 @@
             <button><i class="fas fa-search"></i></button>
           </form>
           <div class="weather-icon">
-            <img id="icon" src="https://assets.msn.com/weathermapdata/1/static/weather/Icons/taskbar_v10/Condition_Card/SunnyDayV3.svg" alt="" />
+            <img id="icon" src="icons/sun/4.png" alt="" />
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
@@ -105,7 +102,7 @@
             </div>
           </div>
         </div>
-        <p class="credits">Lol.</a></p>
+        <p class="credits"></a></p>
       </div>
     </div>
     <script src="script.js"></script>
