--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-        <div class="wrapper">
+  <meta charset="UTF-8">
+  <title>CodePen - Weather Forecast App with many features</title>
+  <title>Weather App</title>
+<script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div class="wrapper">
       <div class="sidebar">
         <div>
           <form class="search" id="search">
@@ -69,7 +75,7 @@
               <h4 class="card-heading">Wind Status</h4>
               <div class="content">
                 <p class="wind-speed">0</p>
-                <p>mph</p>
+                <p>km/h</p>
               </div>
             </div>
             <div class="card2">
@@ -102,6 +108,10 @@
             </div>
           </div>
         </div>
+        <p class="credits"></a></p>
+      </div>
+    </div>
+<!-- partial -->
     <script src="script.js"></script>
 </body>
 </html>
