--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Weather Forecast App with many features</title>
   <title>Weather App</title>
 <script
       src="https://kit.fontawesome.com/64d58efce2.js"
@@ -23,7 +22,7 @@
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
-            <span class="temp-unit">°C</span>
+            <span class="temp-unit">°F</span>
           </div>
           <div class="date-time">
             <p id="date-time">Monday, 12:00</p>
