--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Weather App</title>
+  <title>J Hasty</title>
 <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
