--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>J Hasty</title>
+  <title>Weather App</title>
 <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div class="wrapper">
       <div class="sidebar">
         <div>
@@ -110,7 +109,6 @@
         <p class="credits"></a></p>
       </div>
     </div>
-<!-- partial -->
     <script src="script.js"></script>
 </body>
 </html>
