--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Weather App</title>
 <script
       crossorigin="anonymous"
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="https://github.com/JesseLikesWeatherakaYoshiKart/otherwebsitelol.github.io/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -108,6 +108,6 @@
         <p class="credits"></a></p>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="https://github.com/JesseLikesWeatherakaYoshiKart/otherwebsitelol.github.io/script.js"></script>
 </body>
 </html>
