--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Weather App</title>
-<script
-      crossorigin="anonymous"
-   <link rel="stylesheet" href="https://github.com/JesseLikesWeatherakaYoshiKart/otherwebsitelol.github.io/style.css">
-</head>
-<body>
-<div class="wrapper">
+    <div class="wrapper">
       <div class="sidebar">
         <div>
           <form class="search" id="search">
@@ -20,7 +10,7 @@
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
-            <span class="temp-unit">°F</span>
+            <span class="temp-unit">°C</span>
           </div>
           <div class="date-time">
             <p id="date-time">Monday, 12:00</p>
@@ -108,6 +98,3 @@
         <p class="credits"></a></p>
       </div>
     </div>
-    <script src="https://github.com/JesseLikesWeatherakaYoshiKart/otherwebsitelol.github.io/script.js"></script>
-</body>
-</html>
