--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-    <div class="wrapper">
+<Title>Tornado Time</Title>
+        <div class="wrapper">
       <div class="sidebar">
+   <link rel="stylesheet" href="style.css">
         <div>
           <form class="search" id="search">
             <input type="text" id="query" placeholder="Search..." />
@@ -93,6 +95,9 @@
                 <p class="air-quality-status">Normal</p>
               </div>
             </div>
+              <script src="script.js"></script>
+</body>
+</html>
           </div>
         </div>
         <p class="credits"></a></p>
