--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
 </html>
           </div>
         </div>
-        <p class="credits"></a></p>
+        <h2 class="credits">Webcam Map</a></h2>
       </div>
     </div>
