--- a/index.html
+++ b/index.html
@@ -103,3 +103,4 @@
         <h2 class="credits">Webcam Map</a></h2>
       </div>
     </div>
+<iframe src="https://www.google.com/maps/d/embed?mid=1Y6EUMYudMY-XU0UbIyKBWrknneSiA0Q&ehbc=2E312F" width="640" height="480"></iframe>
