--- a/index.html
+++ b/index.html
@@ -100,4 +100,4 @@
 </html>
       </div>
     </div>
-<iframe src="https://www.google.com/maps/d/embed?mid=1Y6EUMYudMY-XU0UbIyKBWrknneSiA0Q&ehbc=2E312F" width="640" height="480"></iframe>
+<iframe class="webcam-map" src="https://www.google.com/maps/d/embed?mid=1Y6EUMYudMY-XU0UbIyKBWrknneSiA0Q&ehbc=2E312F" width="1080" height="720"></iframe>
