--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<Title>Tornado Time</Title>
-        <div class="wrapper">
+    <div class="wrapper">
       <div class="sidebar">
-   <link rel="stylesheet" href="style.css">
         <div>
           <form class="search" id="search">
             <input type="text" id="query" placeholder="Search..." />
@@ -95,9 +93,8 @@
                 <p class="air-quality-status">Normal</p>
               </div>
             </div>
-              <script src="script.js"></script>
-</body>
-</html>
+          </div>
+        </div>
+        <p class="credits"></a></p>
       </div>
     </div>
-    
