--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
     <div class="wrapper">
       <div class="sidebar">
         <div>
+               <link rel="stylesheet" href="style.css">
           <form class="search" id="search">
             <input type="text" id="query" placeholder="Search..." />
             <button><i class="fas fa-search"></i></button>
@@ -98,3 +99,4 @@
         <p class="credits"></a></p>
       </div>
     </div>
+  <script src="script.js"></script>
