--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-        <p class="credits">View my webcam map href="https://www.google.com/maps/d/edit?mid=1Y6EUMYudMY-XU0UbIyKBWrknneSiA0Q&usp=sharing"</p>
+        <p class="credits">View my webcam map <a href="https://www.google.com/maps/d/edit?mid=1Y6EUMYudMY-XU0UbIyKBWrknneSiA0Q&usp=sharing" Here!</p>
       </div>
     </div>
   <script src="script.js"></script>
