--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
-            <span class="temp-unit">°C</span>
+            <span class="temp-unit">°F</span>
           </div>
           <div class="date-time">
             <p id="date-time">Monday, 12:00</p>
