--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h4 class="card-heading">Wind Status</h4>
               <div class="content">
                 <p class="wind-speed">0</p>
-                <p>km/h</p>
+                <p>mph</p>
               </div>
             </div>
             <div class="card2">
