--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span class="temp-unit">°F</span>
           </div>
           <div class="date-time">
-            <p id="date-time">Monday, 12:00</p>
+            <p id="date-time">Mon, 12:00</p>
           </div>
           <div class="divider"></div>
           <div class="condition-rain">
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="card2">
-              <h4 class="card-heading">Wind Status</h4>
+              <h4 class="card-heading">Wind:</h4>
               <div class="content">
                 <p class="wind-speed">0</p>
                 <p>mph</p>
