--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <button><i class="fas fa-search"></i></button>
           </form>
           <div class="weather-icon">
-            <img id="icon" src="icons/sun/4.png" alt="" />
+            <img id="icon" src="https://files.readme.io/48b265b-weather_icon_small_ic_clear3x.png" alt="" />
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
