--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1><center>The Current Conditons</center></h1>
               <form class="search" id="search">
             <input type="text" id="query" placeholder="Search for Cities!" />
-            <button><i class="fas fa-search"></i></button>
+            <button><i><img id="fas fa-search" src="https://img.icons8.com/?size=70&id=0R4UN0Muj1DX&format=png" class="fas fa-search"></i></button>
                  <div class="weather-icon">
             <img id="icon" src="https://files.readme.io/48b265b-weather_icon_small_ic_clear3x.png" alt="" />
           </div>
