--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="style.css">
+e<link rel="stylesheet" href="style.css">
  <div class="header">
   <body style="background-color:#1c87c9;">
   <h1><center>The Current Conditons</center></h1>
@@ -89,3 +89,5 @@
           </div>
         </div>
    <script src="script.js"></script>
+       <link rel="icon" href="https://raw.githubusercontent.com/JesseLikesWeatherakaYoshiKart/otherwebsitelol.github.io/main/favicon.ico">
+
