--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-e<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
  <div class="header">
   <body style="background-color:#1c87c9;">
   <h1><center>The Current Conditons</center></h1>
