--- a/index.html
+++ b/index.html
@@ -88,4 +88,6 @@
             </div>
           </div>
         </div>
+  <h1><center>The Severe Weather Outlook for Today:</center></h1>
+<center><img src="https://www.spc.noaa.gov/products/outlook/day1otlk-overview.gif" alt="Severe Weather Outlook"></center>
    <script src="script.js"></script>
