--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </nav>
         <div class="cards" id="weather-cards"></div>
         <div class="highlights">
-          <h1 class="heading">today's highlights</h1>
+           <h1 class="heading">today's highlights</h1>
           <div class="cards">
             <div class="card2">
               <h4 class="card-heading">UV Index</h4>
@@ -91,3 +91,4 @@
   <h1><center>The Severe Weather Outlook for Today:</center></h1>
 <center><img src="https://www.spc.noaa.gov/products/outlook/day1otlk-overview.gif" alt="Severe Weather Outlook"></center>
    <script src="script.js"></script>
+   <h2 class="credits">Looking for more details? Try <a href="Other Page/index.html">This link</a></h2>
