--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="style.css">
  <div class="header">
   <body style="background-color:#1c87c9;">
+   <link rel="icon" type="image/x-icon" href=otherwebsitelo.github.io\favicon.ico"
   <h1><center>The Current Conditons</center></h1>
               <form class="search" id="search">
             <input type="text" id="query" placeholder="Search for Cities!" />
