--- a/Other Page/index.html
+++ b/Other Page/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="style.css">
   <body style="background-color:#1c87c9;">
+       <link rel="icon" type="image/x-icon" href=otherwebsitelo.github.io\favicon.ico"
 <h1><center>The Weather Forecast for your area.</h1></center>
 
 <center><div style="width: 700px;"><iframe style="display: block;" src="https://cdnres.willyweather.com/widget/loadView.html?id=150049" width="700" height="520" frameborder="0"  scrolling="no"></iframe><a style="margin: -20px 0 0 0;text-indent: -9999em;height: 20px;position: relative;z-index: 1;display: block" href="https://www.willyweather.com/dc/district-of-columbia-county/washington-dc.html" rel="nofollow">washington dc weather forecast</a></div>
