--- a/Other Page/index.html
+++ b/Other Page/index.html
@@ -1,3 +1,4 @@
+<title>Other Weather Info</title>
 <link rel="stylesheet" href="style.css">
   <body style="background-color:#1c87c9;">
        <link rel="icon" type="image/x-icon" href=otherwebsitelo.github.io\favicon.ico"
@@ -7,3 +8,8 @@
   <script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150046" type="application/javascript"></script></center>
 <script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150052" type="application/javascript"></script>
 <script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150053" type="application/javascript"></script>
+<script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150054" type="application/javascript"></script>
+<script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150055" type="application/javascript"></script>
+<script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150056" type="application/javascript"></script>
+<script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150057" type="application/javascript"></script>
+<script src="https://cdnres.willyweather.com/widget/warning/loadView.html?id=150058" type="application/javascript"></script>
