--- a/index.html
+++ b/index.html
@@ -93,4 +93,4 @@
 <center><img src="https://www.spc.noaa.gov/products/outlook/day1otlk-overview.gif" alt="Severe Weather Outlook"></center>
    <script src="script.js"></script>
    <h2 class="credits">Looking for more details? Try <a href="Other Page/index.html">This link</a></h2>
-       <center><h1><a href="jesseweatherstationdata.github.io/index.html">Weather Station Data</a></h1></center>
+       <center><h1><a href="https://jesselikesweatherakayoshikart.github.io/otherwebsitelol.github.io/jesseweatherstationdata.github.io/index.html">Weather Station Data</a></h1></center>
