--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
  <div class="header">
   <body style="background-color:#1c87c9;">
    <link rel="icon" type="image/x-icon" href=otherwebsitelo.github.io\favicon.ico"
-  <h1><center>The Current Conditons</center></h1>
+   <title>Jesses Html Website - Other Website</title>
+   <h1><center>The Current Conditons</center></h1>
               <form class="search" id="search">
             <input type="text" id="query" placeholder="Search for Cities!" />
             <button><i><img id="fas fa-search" src="https://img.icons8.com/?size=70&id=0R4UN0Muj1DX&format=png" class="fas fa-search"></i></button>
