--- a/jesseweatherstationdata.github.io/index.html
+++ b/jesseweatherstationdata.github.io/index.html
@@ -3,7 +3,7 @@
           href="https://fonts.googleapis.com/css2?family=Rambla:wght@700"> 
     <style>
       body {
-        font-family: 'Rambla', sans-serif;
+        font-family: 'Interstate', sans-serif;
         font-size: 20px;
       }
     </style>
