--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
       <div class="sidebar">
         <div>
           <form class="search" id="search">
-            <input type="text" id="query" placeholder="Search for a city." />
+            <input type="text" id="query" placeholder="Search..." />
             <button><i class="fas fa-search"></i></button>
           </form>
           <div class="weather-icon">
-            <img id="icon" src="https://files.readme.io/48b265b-weather_icon_small_ic_clear3x.png" alt="" />
+            <img id="icon" src="icons/sun/4.png" alt="" />
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
@@ -95,15 +95,9 @@
             </div>
           </div>
         </div>
-  <h1><center>The Severe Weather Outlook for Today:</center></h1>
-<center><img src="https://www.spc.noaa.gov/products/outlook/day1otlk-overview.gif" alt="Severe Weather Outlook"></center>
-   <script src="script.js"></script>
-   <h2 class="credits">Looking for more details? Try <a href="Other Page/index.html">This link</a></h2>
-       <center><h1><a href="jesseweatherstationdata.github.io/index.html">Weather Station Data</a></h1></center>
- <center><h3>This Website is dedicated to Jesus Christ, our Savior. Verse of the day:</h4></center>
-  <h2>-</h2>  
-</div>
-
+      </div>
+    </div>
+<h4>This Website is dedicated to Jesus Christ, who died on the cross for our sins.</h4>
 <!-- START DAILY BIBLE VERSE CODE FROM Christianity.com -->
 <!-- CHANGING THIS CODE MAY RESULT IN ALTERED LOOKS OR ERRORS -->
                                 <div style="background:#FFFFFF;border:1px solid #000000;padding:2px 0px 3px;margin:0px;width:100%;"><p style="text-align:center;color:#000000;padding:0px;margin:0px 4px;border:0px;font-family:Rambla,sans-serif;font-size:18px;"><a href="https://www.christianity.com/bible/daily-bible-verse/" style="color:#000000;font-family:Rambla,sans-serif;font-size:18px;padding:0px;margin:0px;border:0px;font-weight:normal;font-style:normal;text-decoration:none;background:#FFFFFF;" onclick="javascript:window.open('https://www.christianity.com/bible/daily-bible-verse/');return false">Daily Bible Verse</a></p><p style="text-align:left;color:#000000;padding:0px;margin:3px 4px 0px;border:0px;font-family:Rambla,sans-serif;font-size:14px;">
