--- a/index.html
+++ b/index.html
@@ -95,13 +95,6 @@
             </div>
           </div>
         </div>
+        <p class="credits"></a></p>
       </div>
     </div>
-<h4>This Website is dedicated to Jesus Christ, who died on the cross for our sins.</h4>
-<!-- START DAILY BIBLE VERSE CODE FROM Christianity.com -->
-<!-- CHANGING THIS CODE MAY RESULT IN ALTERED LOOKS OR ERRORS -->
-                                <div style="background:#FFFFFF;border:1px solid #000000;padding:2px 0px 3px;margin:0px;width:100%;"><p style="text-align:center;color:#000000;padding:0px;margin:0px 4px;border:0px;font-family:Rambla,sans-serif;font-size:18px;"><a href="https://www.christianity.com/bible/daily-bible-verse/" style="color:#000000;font-family:Rambla,sans-serif;font-size:18px;padding:0px;margin:0px;border:0px;font-weight:normal;font-style:normal;text-decoration:none;background:#FFFFFF;" onclick="javascript:window.open('https://www.christianity.com/bible/daily-bible-verse/');return false">Daily Bible Verse</a></p><p style="text-align:left;color:#000000;padding:0px;margin:3px 4px 0px;border:0px;font-family:Rambla,sans-serif;font-size:14px;">
-<script type="text/javascript" src="https://www.christianity.com/bible/syndicate.php?content=dbv&amp;type=js2&amp;tw=100%25&amp;tbg=FFFFFF&amp;bw=1&amp;bc=000000&amp;ta=C&amp;tc=000000&amp;tf=Rambla&amp;ts=18&amp;ty=&amp;va=L&amp;vc=000000&amp;vf=Rambla&amp;vs=14&amp;tt=1&amp;trn=NKJV"></script>
-</p><p style="text-align:left;color:#000000;padding:0px;margin:3px 4px 0px;border:0px;font-family:Rambla,sans-serif;font-size:14px;">Provided by <a href="https://www.christianity.com/bible/" style="color:#000000;font-family:Rambla,sans-serif;font-size:14px;text-decoration:underline;padding:0px;margin:0px;border:0px;background:#FFFFFF;" onclick="javascript:window.open('https://www.christianity.com/bible/');return false">Christianity.com Bible Search</a></p></div>
-<!-- END DAILY BIBLE VERSE CODE FROM Christianity.com -->
-                            
