--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-    <div class="wrapper">
+   <script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+<div class="wrapper">
       <div class="sidebar">
         <div>
           <form class="search" id="search">
