--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <div class="divider"></div>
           <div class="condition-rain">
             <div class="condition">
-              <i class="fas fa-cloud"></i>
-              <p id="condition">condition</p>
+<i class="fas fa-cloud" aria-hidden="true"></i>              
+      <p id="condition">condition</p>
             </div>
             <div class="rain">
               <i class="fas fa-tint"></i>
