--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <button><i class="fas fa-search"></i></button>
           </form>
           <div class="weather-icon">
-            <img id="icon" src="icons/sun/4.png" alt="" />
+            <img id="icon" src="https://github.com/brenden7158/Weatherscan/blob/master/webroot/images/icons2007/19.png?raw=true" alt="" />
           </div>
           <div class="temperature">
             <h1 id="temp">0</h1>
