--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
       <div class="main">
         <nav>
           <ul class="options">
-            <button class="hourly">today</button>
-            <button class="week active">week</button>
+            <button class="hourly">Hourly Forecast</button>
+            <button class="week active">Daily Forecast</button>
+            <button class="week active">Weather Outlooks</button>
+
           </ul>
           <ul class="options units">
             <button class="celcius active">°C</button>
