--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <ul class="options">
             <button class="hourly">Hourly Forecast</button>
             <button class="week active">Daily Forecast</button>
-            <button class="week active">Weather Outlooks</button>
+            <button class="outlook">Weather Outlooks</button>
 
           </ul>
           <ul class="options units">
